--- a/package.json
+++ b/package.json
@@ -1,12 +1,15 @@
 {
-	"name": "com.depra.template",
+	"name": "com.depra.pooling.unity",
 	"version": "0.0.1",
-	"displayName": "Unity Package Template",
-	"description": "Template for creating Unity game engine packages.",
+	"displayName": "Depra.Pooling",
+	"description": "",
 	"unity": "2022.3",
 	"license": "Apache-2.0",
-  "dependencies": {},
-	"keywords": [],
+	"dependencies": {},
+	"keywords": [
+		"unity",
+		"pooling"
+	],
 	"author": {
 		"name": "Depra, Inc.",
 		"email": "n.melnikov@depra.org",
@@ -14,6 +17,6 @@
 	},
 	"repository": {
 		"type": "git",
-		"url": "https://github.com/Depra-Inc/Template.Package.Unity.git"
+		"url": "https://github.com/Depra-Inc/Pooling.Unity.git"
 	}
 }
