[v0.0.7-pre.1] Update native deps

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "com.depra.pooling.unity",
-	"version": "0.0.6",
+	"version": "0.0.7-pre.1",
 	"displayName": "Depra.Pooling",
 	"description": "",
 	"unity": "2022.3",
