Update package version to 0.0.10

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "com.depra.pooling.unity",
-	"version": "0.0.10-pre.2",
+	"version": "0.0.10",
 	"displayName": "Depra.Pooling",
 	"description": "",
 	"unity": "2022.3",
